--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
         sync: false
       - key: DB_PASSWORD
         sync: false
+      - key: DB_DRIVER
+        value: org.postgresql.Driver
       - key: JWT_SECRET
         generateValue: true
       - key: GOOGLE_CLIENT_ID
